force-app/main/default/objects/Family__c/Family__c.object-meta.xml
<CustomObject>
    <label>Family</label>
    <nameField>
        <displayFormat>Member-{00}</displayFormat>
        <label>Family Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>