force-app/main/default/objects/Family__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Brother-in-law</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Sister-in-law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>